<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MainActivity">

    <EditText
        android:id="@+id/source_airport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints="@string/from"
        android:hint="@string/from"
        android:inputType="textCapCharacters"
        app:layout_constraintBottom_toTopOf="@id/travel_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/dest_airport"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />


    <EditText
        android:id="@+id/dest_airport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints="@string/to"
        android:hint="@string/to"
        android:inputType="textCapCharacters"
        app:layout_constraintBottom_toTopOf="@id/return_date"
        app:layout_constraintLeft_toRightOf="@id/source_airport"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/travel_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints="@string/sample_date"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/sample_date"
        android:inputType="date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/return_date"
        app:layout_constraintTop_toBottomOf="@id/source_airport"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/return_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints="@string/sample_date"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/sample_date"
        android:inputType="date"
        app:layout_constraintLeft_toRightOf="@id/travel_date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dest_airport"
        tools:targetApi="o" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/travel_date" />
</androidx.constraintlayout.widget.ConstraintLayout>